syntax = "proto3";

package pb;

option go_package = "/pb";

enum Direction {
    L = 0;
    R = 1;
}

enum Orientation {
    N =   0;
    E =  90;
    S = 180;
    W = 270;
}

message RotateReq {
    Direction Direction = 1;
}

message GoForwardReq {
    int32 NumberOfSteps = 1;
}

message RoverPosition {
    int32       X                    = 1;
    int32       Y                    = 2;
    Orientation Orientation          = 3;
    string      SquadIncomingMessage = 4;
}

service MarsRoverNavigateService {
    rpc Rotate(RotateReq) returns (RoverPosition);
    rpc GoForward(GoForwardReq) returns (RoverPosition);
}